Project

General

Profile

Actions

Bug #21743

closed

rgw: null instance mtime incorrect when enable versioning

Added by shasha lu over 6 years ago. Updated about 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
jewel luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

steps to reproduce:
1、create a bucket and put objA
2、get objA. record the Last modified time.
2、enable bucket versioning
3、put objA again
4、the last modified time of null instance objA is changed

null instance and olh share rados object. Null instance using the rados object mtime as its mtime. When olh updated, the rados object mtime will change.
Thus the null instance will be incorrect. When list objects in bucket, the mtime is correct, down the null instance the last modified time is incorrect.


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #21949: luminous: rgw: null instance mtime incorrect when enable versioningResolvedActions
Copied to rgw - Backport #21950: jewel: rgw: null instance mtime incorrect when enable versioningResolvedNathan CutlerActions
Actions #2

Updated by Casey Bodley over 6 years ago

  • Status changed from New to Pending Backport
  • Backport set to jewel luminous
Actions #3

Updated by Nathan Cutler over 6 years ago

  • Copied to Backport #21949: luminous: rgw: null instance mtime incorrect when enable versioning added
Actions #4

Updated by Nathan Cutler over 6 years ago

  • Copied to Backport #21950: jewel: rgw: null instance mtime incorrect when enable versioning added
Actions #5

Updated by Nathan Cutler about 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF