rgw: don't change rados object's mtime when update olh

null instance and olh share rados object. Null instance using the rados object mtime as its mtime. When olh updated, the rados object mtime will change.
Thus the null instance will be incorrect. When list objects in bucket, the mtime is correct, down the null instance the last modified time is incorrect.
So when update olh, using the previous mtime, thus the null instance mtime will be correct.

Fixes: http://tracker.ceph.com/issues/21743

Signed-off-by: Shasha Lu <lu.shasha@eisoo.com>
(cherry picked from commit 3189edc28ea6d3c117c2e2f0664f45c69f67ab50)